[DEVELOP][NAVBAR] Add z-index and relative position to container to correct overlapping.

--- a/Django/static/css/style.css
+++ b/Django/static/css/style.css
@@ -14,6 +14,8 @@ body {
     margin: 0 auto;
     padding: 30px;
     max-width: 900px;
+    position: relative;
+    z-index: -1;
 }
 .container-narrow > hr {
     margin: 30px 0;
